# polartox

./: .gitignore  CHANGELOG.md  README.md  demo.ipynb  pyproject.toml
data_gen/: README.md  datagen_demo.ipynb
polarized_trees/: README.md  trees_demo.ipynb
polarizedtrees/: __init__.py  datagen.py
polartox/: __init__.py  datagen.py  polarized_trees.py
tests/: test_datagen.py  test_ndfu.py  test_trees.py
toxpol/: datagen.py
